--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 jobs:
   build:
     docker:
-    - image: circleci/<language>:node:14.15.4
+    - image: circleci/node:14.15.4
     steps:
       - checkout
       - run: npm install
